# ai-heroes-demo

./: .gitignore  README.md  prompt-example.s.txt  prompt-examples.txt
app/: README.md  pyproject.toml
app/agents/: README.md
app/agents/crewai/: README.md  __main__.py  agent.py  crew_execution.json  final.txt  outline.txt  pyproject.toml
app/agents/langchain/: README.md  __main__.py  agent.py  pyproject.toml
app/agents/langgraph/: README.md  __main__.py  agent.py  pyproject.toml
app/hosts/: README.md
app/hosts/cli/: README.md  __main__.py  pyproject.toml
samples/python/: README.md  pyproject.toml
samples/python/agents/crewai/: README.md  __main__.py  agent.py  crew_execution.json  draft.txt  final.txt  outline.txt  task_manager.py
samples/python/agents/langchain/: README.md  agent.py  pyproject.toml  task_manager.py
samples/python/agents/langgraph/: README.md  __main__.py  agent.py  pyproject.toml  task_manager.py
samples/python/common/server/: server.py  task_manager.py
samples/python/hosts/cli/: README.md  __main__.py
samples/python/hosts/multiagent/: __main__.py  agent.py  client.py  discovery.py  host_agent.py  pyproject.toml  remote_agent_connection.py  router.py
